--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				  			</h1>	
 
 				  			<div class="more animate-intro">
-				  				<a class="smoothscroll button stroke" href="https://www.dgwhyperloop.in">
+				  				<a class="button stroke" href="https://www.dgwhyperloop.in/" target="_blank">
 				  					Learn More
 				  				</a>
 				  			</div>							
