--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
-	   			<h6><a href="https://www.dgwhyperloop.com">DGWHyperloop Website</a></h6>
+	   			<h6><a href="https://www.dgwhyperloop.in">DGWHyperloop Website</a></h6>
 	   		</div> <!-- end cinfo -->
 
          </div> <!-- end cinfo --> 
